--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3'
 
 services:
+
+    postgres:
+        image: 'postgres:9.6.17'
+        environment: 
+            POSTGRES_PASSWORD: CHANGEME
+        volumes:
+            - db-data:/var/lib/postgresql/data
+
     rest_api:
         build:
             context: .
@@ -12,6 +20,10 @@ services:
             - ./rest_api:/app
         environment: 
             FLASK_ENV: development
+        depends_on: 
+            - postgres
+        links:
+            - "postgres"
 
     frontend:
         build:
@@ -24,3 +36,7 @@ services:
             - ./frontend:/app
         depends_on: 
             - rest_api
+
+volumes:
+    db-data:
+        driver: local
