--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "history": "^4.10.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "PORT=5000 react-scripts start",
