--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             POSTGRES_PASSWORD: CHANGEME
         volumes:
             - db-data:/var/lib/postgresql/data
+        restart: always
 
     rest_api:
         build:
@@ -27,6 +28,7 @@ services:
             - postgres
         links:
             - "postgres"
+        restart: always
 
     frontend:
         build:
@@ -40,6 +42,7 @@ services:
         environment:
             NODE_ENV: production
             REST_API_URL: 52.117.215.3:81
+        restart: always
 
 volumes:
     db-data:
