--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -44,6 +44,20 @@ services:
             - rest_api
         restart: always
 
+    
+    nginx:
+        image: 'nginx:1.17.9-alpine'
+        ports:
+            - 80:80
+        depends_on: 
+            - frontend
+            - rest_api
+        volumes:
+            - ./docker/files/nginx.conf:/etc/nginx/nginx.conf
+        links:
+            - frontend:frontend
+            - rest_api:rest_api
+    
 volumes:
     db-data:
         driver: local
