--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
             context: .
             dockerfile: ./docker/rest_api.dockerfile
         image: 'w241-final-project/rest_api'
-        ports:
-            - 81:5000
         volumes:
             - ./rest_api:/app
         environment: 
@@ -35,14 +33,25 @@ services:
             context: .
             dockerfile: ./docker/frontend.dockerfile
         image: 'w241-final-project/frontend'
-        ports:
-            - 80:5000
         depends_on: 
             - rest_api
         environment:
             NODE_ENV: production
-            REST_API_URL: 52.117.215.3:81
         restart: always
+
+    
+    nginx:
+        image: 'nginx:1.17.9-alpine'
+        ports:
+            - 80:80
+        depends_on: 
+            - frontend
+            - rest_api
+        volumes:
+            - ./docker/files/nginx.conf:/etc/nginx/nginx.conf
+        links:
+            - frontend:frontend
+            - rest_api:rest_api
 
 volumes:
     db-data:
