--- a/docker/files/nginx.conf
+++ b/docker/files/nginx.conf
@@ -3,6 +3,12 @@ events {}
 
 http {
   server {
+    listen 443 ssl;
+    ssl_certificate /etc/ssl/doolittle.dev/fullchain.pem;
+    ssl_certificate_key /etc/ssl/doolittle.dev/privkey.pem;
+
+    server_name doolittle.dev www.doolittle.dev;
+
     location / {
       proxy_set_header Host $host;
       proxy_pass  http://frontend:5000/;
