--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 ### CUSTOM
 .vscode/
+ssl/
 
 ### DEFAULT NODE
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
