--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -17,8 +17,6 @@ services:
             context: .
             dockerfile: ./docker/rest_api.dockerfile
         image: 'w241-final-project/rest_api'
-        ports:
-            - 5000:5000
         volumes:
             - ./rest_api:/app
         environment: 
@@ -34,8 +32,6 @@ services:
             context: .
             dockerfile: ./docker/frontend.dockerfile
         image: 'w241-final-project/frontend-dev'
-        ports:
-            - 5001:5000
         volumes:
             - ./frontend:/app
         environment:
@@ -54,6 +50,7 @@ services:
             - rest_api
         volumes:
             - ./docker/files/nginx.conf:/etc/nginx/nginx.conf
+            - ./docker/files/ssl/:/etc/ssl/doolittle.dev/
         links:
             - frontend:frontend
             - rest_api:rest_api
