--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,14 @@ services:
         image: 'nginx:1.17.9-alpine'
         ports:
             - 80:80
+            - 443:443
         depends_on: 
             - frontend
             - rest_api
         volumes:
             - ./docker/files/nginx.conf:/etc/nginx/nginx.conf
-            - /etc/letsencrypt/live/doolittle.dev/:/etc/ssl/doolittle.dev/
+            - /etc/letsencrypt/live/doolittle.dev/fullchain.pem:/etc/ssl/doolittle.dev/fullchain.pem
+            - /etc/letsencrypt/live/doolittle.dev/privkey.pem:/etc/ssl/doolittle.dev/privkey.pem
         links:
             - frontend:frontend
             - rest_api:rest_api
