--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,12 @@ services:
         build:
             context: .
             dockerfile: ./docker/db.dockerfile
-        environment: 
+        environment:  &db-connection-environment
+            POSTGRES_USERNAME: postgres
             POSTGRES_PASSWORD: CHANGEME
+            POSTGRES_HOST: postgres
+            POSTGRES_PORT: 5432
+            POSTGRES_DBNAME: postgres
         volumes:
             - db-data:/var/lib/postgresql/data
         restart: always
@@ -16,12 +20,13 @@ services:
     rest_api:
         build:
             context: .
-            dockerfile: ./docker/rest_api.dockerfile
+            dockerfile: ./docker/python.dockerfile
         image: 'w241-final-project/rest_api'
         volumes:
             - ./rest_api:/app
         environment: 
             FLASK_ENV: production
+            <<: *db-connection-environment
         depends_on: 
             - postgres
         links:
@@ -31,7 +36,7 @@ services:
     frontend:
         build:
             context: .
-            dockerfile: ./docker/frontend.dockerfile
+            dockerfile: ./docker/react.dockerfile
         image: 'w241-final-project/frontend'
         depends_on: 
             - rest_api
@@ -39,7 +44,6 @@ services:
             NODE_ENV: production
         restart: always
 
-    
     nginx:
         image: 'nginx:1.17.9-alpine'
         ports:
