--- a/rest_api/requirements.txt
+++ b/rest_api/requirements.txt
@@ -1,5 +1,9 @@
+click==7.0
 flask==1.1.1
 flask-cors==3.0.8
 marshmallow==3.5.0
 marshmallow_enum==1.5.1
 psycopg2==2.8.4
+tabulate==0.8.6
+tqdm==4.43.0
+gunicorn==20.0.4
