--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
             dockerfile: ./docker/python.dockerfile
         image: 'w241-final-project/rest_api'
         volumes:
-            - ./rest_api:/app
+            - ./rest_api/sql:/opt/sql
         environment: 
             FLASK_ENV: production
             <<: *db-connection-environment
