Create data collection scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### CUSTOM
 .vscode/
 ssl/
+*.csv
 
 ### DEFAULT NODE
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
